# computer-vision

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_ML_IMPROVEMENTS_SUMMARY.md  BUILD_SUCCESS.md  BUILD_SUCCESS_UPDATED.md  CAMERA_DETECTION_DEBUG.md  CMakeLists.txt  CMakePresets.json  COMPLETE_CLEANUP.sh  DEV_ENVIRONMENT.md  DIRECTORY_CLEANUP_SUMMARY.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  FINAL_INTEGRATION_COMPLETE.md  IMPROVEMENTS_ROADMAP.md  LICENSE  NEXT_STEPS_PRODUCTION.md  NEXT_STEPS_TESTING.md  OPENCV_OPTIMIZATION.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  SECURITY.md  Universal_Docker_Development_Strategy.ipynb  WEBCAM_DETECTION_FIXED.md  WEBCAM_IMPLEMENTATION.md  WORKFLOW.md  build.sh  build_amd.sh  debug-restart.sh  debug-services.sh  docker-compose.yml  docker-compose.yml.backup  docker-compose.yml.new  docker-demo.sh  docker-status.sh  launch_calibration_test.sh  launch_gui.sh  mkdocs.yml  priority2_summary  (+20 more)
.copilot/: project_config.json
.github/workflows/: ci-multi-platform.yml  ci.yml  ci_cpu.yml
api/: api-server.py
archive/: PROJECT_CLEANUP_PLAN.md  README.md
archive/milestone_docs/: DIRECTORY_CLEANUP_SUMMARY.md  PRIORITY2_COMPLETE.md  PROJECT_MODERNIZATION_STRATEGY.md
archive/temp_tests/: test_benchmarking  test_benchmarking.cpp  test_neural_network.cpp  test_priority2_complete.cpp
build_amd/: compile_commands.json
build_scripts/: README.md  build.sh  build_debug.sh  clean.sh  launch_gui.sh  modernize_project.sh  setup_amd_gpu.sh  setup_dev_environment.sh  test_gui.sh  test_priority2_features.sh
config/: .clang-format  .editorconfig  .env.example  models.yaml  models_urls.sh
docker/: DOCKER_SETUP.md  Dockerfile  Dockerfile.novnc  docker-compose.yml.new  entrypoint.sh
docs/: CALIBRATION_WIZARD_READY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Cplusplus.md  GUI_IMPROVEMENTS_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  LIVE_PARAMETER_TUNING.md  MODERNIZATION_COMPLETE.md  NEXT_STEPS_ADVANCED.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_IMPROVEMENT_COMPLETE.md  README_CLEANUP.md  README_DEMO.md  README_MOVES.md  SETUP_REQUIREMENTS.md  WINDOWS_11_UPGRADE_COMPLETE.md  index.md  point_cloud_features.md  project_plan.md  shields_badges.md  test_plan.md  webcam_capture.md
docs-env/: pyvenv.cfg
docs/development/: contributing.md  performance-reports.md
docs/getting-started/: quick-start.md
docs/guides/: DOCKER_RUNNER_README.md  README_CLEANUP.md
docs/misc/: CONTRIBUTING.md  PROJECT_CLEANUP_COMPLETE.md  README_CLEANUP.md
docs/setup/: docker-readme.md  docker-setup-complete.md
docs/tutorials/: basic-stereo.md
docs/user-guide/: overview.md  streaming.md
documentation/: CALIBRATION_FEATURE_IMPLEMENTATION_COMPLETE.md  EDGE_CASE_TESTING_FRAMEWORK.md  FINAL_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_ORGANIZATION_SUMMARY.md  README.md
documentation/features/: ADVANCED_FEATURES_COMPLETE.md  CAMERA_CALIBRATION_WIZARD_COMPLETE.md  CAMERA_FIXES_COMPLETE.md
documentation/planning/: AI_ML_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_PLAN.md
documentation/process/: WORKFLOW.md
documentation/setup/: SETUP_COMPLETE.md
gui/: Dockerfile  app.js  config.json  styles.css
include/: ai_calibration.hpp  batch_processor.hpp  batch_processor_new.hpp  batch_processor_old.hpp  camera_calibration.hpp  camera_manager.hpp  gpu_common.hpp  gpu_stereo_matcher.hpp  live_stereo_processor.hpp  point_cloud_processor.hpp  stereo_matcher.hpp
include/ai/: enhanced_neural_matcher.hpp  model_registry.hpp  neural_stereo_matcher.hpp  neural_stereo_matcher_simple.hpp  onnx_provider_manager.hpp  tensorrt_cache.hpp
include/benchmark/: performance_benchmark.hpp  performance_benchmark_simple.hpp
include/calibration/: advanced_calibration.hpp
include/config/: config_features.hpp.in
include/gui/: batch_processing_window.hpp  calibration_wizard.hpp  camera_selector_dialog.hpp  disparity_display_widget.hpp  enhanced_image_widget.hpp  enhanced_parameter_panel.hpp  epipolar_checker.hpp  image_display_widget.hpp  live_calibration_widget.hpp  live_parameter_panel.hpp  live_stereo_tuning_window.hpp  main_window.hpp  modern_calibration_wizard.hpp  modern_theme.hpp  parameter_panel.hpp  performance_benchmark.hpp  point_cloud_widget.hpp  settings_manager.hpp  setup_wizard.hpp
include/logging/: structured_logger.hpp
include/multicam/: multi_camera_system.hpp  multi_camera_system_simple.hpp
include/streaming/: advanced_streaming_pipeline.hpp  enhanced_streaming_processor.hpp  enhanced_streaming_processor_simple.hpp  streaming_optimizer.hpp
include/utils/: perf_profiler.hpp
logs/: README.md
reports/: README.md
reports/benchmarks/: benchmark_report.html  (+2 more)
scripts/: check-status.sh  check_dependencies.sh  clean-now.sh  complete-setup.sh  compose-debug.sh  diagnose_env.sh  download_sample_data.sh  execute-reorganization.sh  fetch_models.sh  final-execution.sh  package_release.sh  quick-test.sh  reorganize-project.sh  run-reorganization-now.sh  run_benchmarks.sh  smoke.sh  smoke_tests.sh  start-reorganization.sh  test_calibration_wizard.sh  update-docker-setup.sh
site/: sitemap.xml
src/: batch_core_test.cpp  batch_processing_test.cpp  batch_processor.cpp  live_stereo_tuning_main.cpp  main.cpp  main_simple.cpp
test_programs/: CMakeLists.txt  README.md  test_advanced_calibration.cpp  test_camera_list.cpp  test_camera_manager.cpp  test_cameras.cpp  test_enhanced_neural_matcher.cpp  test_onnx_load.cpp  test_pointcloud.cpp  test_single_camera  test_single_camera.cpp  test_stereo_cpu.cpp
tests/: CMakeLists.txt  deploy_modern_ui.sh  edge_case_framework.cpp  edge_case_framework.hpp  main.cpp  run_edge_case_tests.sh  test_camera_calibration_edge_cases.cpp  test_core.cpp  test_gui.cpp  test_gui_camera_detection.cpp  test_neural_matcher_edge_cases.cpp  test_point_cloud_edge_cases.cpp  test_system_edge_cases.cpp
tests/ai/: test_model_registry.cpp  test_onnx_provider_manager.cpp  test_tensorrt_cache.cpp
tests/logging/: test_structured_logger.cpp
tests/test_programs/: test_camera_manager  test_direct_camera.cpp
tools/: model_manager.py
(+122 files in other folders)
